--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,40 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	background-color: #e2d9c5;
+ 	margin: 0;
+  	padding: 0;
+  	font-family: sans-serif;
+}
+
+#root {
+	margin-top: 200px;
+}
+
+.board {
+	border: 1px solid black;
+	margin: 0 auto;
+	width: 300px;
+}
+
+.board-row {
+	display: flex;
+}
+
+.square {
+	background-color: white;
+	border: 1px solid black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 32px;
+	width: 33%;
+	height: 100px;
+}
+
+.square:hover {
+	background-color: #fcfcfc;
+	cursor: pointer;
+}
+
+.square:active {
+	background-color: #eeeeee;
 }
